Fix scenarios and use cases

--- a/RASD/Sections/3-Specific_Requirements/Functional_requirements/Scenarios.tex
+++ b/RASD/Sections/3-Specific_Requirements/Functional_requirements/Scenarios.tex
@@ -1,22 +1,21 @@
 \subsubsection{Scenario 1}
-John is a very sportsman person who likes to ride his bicycle a lot. So as every Sunday afternoon he decides to go for a ride along the bicycle lane near his house. After some time he sees a car parked right on the bicycle lane that limits the passage of bicycles. Therefore John decides to open up the SafeStreets application on his smartphone and takes a picture of the car. After that he selects the "No parking zone" as a violation category and he even adds the car plate number to the report just to make sure that it will get correctly processed by the officers. 
+John is a very sportsman person who likes to ride his bicycle a lot. Therefore, every Sunday afternoon he decides to go for a ride along the bicycle lane near his house. After some time he sees a car parked on the bike lane that limits the passage of bicycles. Thus, John decides to open up the SafeStreets application on his smartphone and takes a picture of the car. After that he selects the "No parking zone" as a violation category and adds the car plate number to the report in order to make sure that it will get correctly processed by the officers. 
 
 \subsubsection{Scenario 2}
-% TODO: check grammar
-Albert's son Freddy has recently been operated to his leg so the municipality released to him the pass that allows Albert to park his car in places reserved for people with disabilities. Albert has to bring Freddy to the doctor for some checks every week. Sometimes he manages to find the parking spot in front of the hospital reserved for people with disabilities free but some other times the place is occupied by some other car that does not have the pass. When this happens he needs to find another parking spot which may not be close to the hospital and therefore he his forced to make his son walk to the centre which can be dangerous as he has just been operated. After some weeks in this conditions Albert decides to use the SafeStreets service in order to prove if the service can be really useful or not. Therefore he sends a report every time he finds this kind of situation. After some weeks he notices that the parking spot is either free or regularly occupied indeed he checks his report history to find out that all of his requests have been take into account by the police.
+Albert's son, Freddy, has recently been operated to his leg. Thus, the municipality released him a pass which allows Albert to park in places reserved for people with disabilities. During the week, Albert has to take Freddy to the doctor for some checks. Sometimes, he manages to find a free parking spot in front of the hospital reserved for people with disabilities, but other times the place happens to be occupied by another car without a disabilities' pass. When this happens he needs to find another parking spot more distant from the hospital and therefore he his forced to make his son walk to the healthcare center. This can be dangerous as he has just been operated. After some weeks in this condition, Albert decides to use the SafeStreets service in order to prove if the service can be really useful: he sends a report every time he finds himself in this kind of situation. After a certain period, he notices that the parking spots are either free or regularly occupied. In order to prove the functioning of the app, Albert checks his report history and finds out that all of his requests have been solved by the police.
 
 \subsubsection{Scenario 3}
-Like every morning Kevin wakes up to go to work. Around 7 o'clock he leaves home to get to the parking slot where he left his car yesterday. When he arrives he notices that the car parked behind his has crushed into his rear bumper leaving a noticeable dent. He does not have time to call the police because he is in a hurry for an important meeting at work so he decides to immediately send a crush report by taking a picture of the unpleasant event, after that he rapidly gets on his car in order to arrive in time at work. When he returns from work he opens up the SafeStreets app once again to check the status of his report. Fortunately he finds out that his request has been taken into account by a local officer.
+Every morning Kevin wakes up to go to work. Around 7 o'clock he leaves home to get to the parking spot where he parked his car the day before. Once he arrives at his car location, he notices that the car parked behind his' has crushed into his rear bumper leaving a noticeable dent. He does not have time to call the police because he is in a hurry for an important meeting at work, thus he decides to immediately send a crush report by taking a picture of the unpleasant event. After that, he rapidly gets on his car in order to arrive in time at work. Once he finishes his shift, he opens up the SafeStreets app to check the status of his report. Fortunately, he finds out that his request has been taken into account by a local police officer.
 
 \subsubsection{Scenario 4}
-Marco has been invited to his friend Luigi's graduation party organized to celebrate his newly graduated master degree in Computer Science and Engineering obtained at Politecnico di Milano. Since he lives in a small city with very limited public transportation solutions to go to Milano he decides to go with his car to event. When he is almost near to the designated place he starts to think where to park his car. After some time he remembers that Luigi told him to download the SafeStreets app in order to check which are the most unsafe streets in the area. He stops for a second and opens the mobile application, then he navigates to the map section and finds on the map the location where the place is held.  The application then enlightens the most dangerous streets near this location so that Marco can avoid parking his car there.
+Marco has been invited to Luigi's graduation party organized to celebrate his master degree in Computer Science and Engineering obtained at Politecnico di Milano. Marco lives in a small city with very limited public transportation solutions. In order to get to Milan, he decides to go with his car to the event. Once he is almost close to the designated place, he starts to looking for a parking spot. Soon later, he remembers that Luigi told him to download the SafeStreets app in order to check where the most unsafe streets in the area could be. He stops the car and opens the mobile application. Then, he navigates to the map section and finds on the map the location where the party is held. The application highlights the most dangerous streets near this location so that Marco can avoid parking his car there.
 
 \subsubsection{Scenario 5}
-Leon is a newly hired police technician for the Berlin police department. For his first days of work the corporal assigned to him some routine work mainly represented as patrols or giving tickets. In order to check where he needs to go today he logs in with his credentials in to the SafeStreets Web application from his computer located in the police station. He then consults the new violation reports submitted in the city in order to find out their locations. 
+Leon is a newly hired police technician at the Berlin police department. For his first days of work the corporal assigned  him some routine work, mainly focused on patrols and giving fines. In order to check where he needs to patrol, he logs into the SafeStreets Web application from his computer with his credentials. Once logged in, He consults the scheduled violation reports submitted by the police corporate, in order to find out their locations. 
 
 \subsubsection{Scenario 6}
-Daniele is the local system administrator of the Genova police department and he is responsible of dispatching the patrols. He decides that he wants to schedule the officers in a more intelligent way. To do that he consults the SafeStreets report database by logging in the web application. He would like to send the more experienced officers to areas in which there is a high number of violations categorized as "crash violations" whereas he would like to assign regular officers to other streets with an high frequency of violation of any category. In order to find out those streets he write down a query and execute it via the web application; after some seconds the interface displays the desired results, therefore he is able to schedule the patrols as he wants. Daniele would also like to communicate to all the officers which are the 10 cars that committed the highest number of violations in the city. To do that he once again performs a query on the SafeStreets web application searching for the 10 car plates with the highest rate of violations.
+Daniele is the local system administrator of the Genova police department and he is responsible of dispatching patrols. He decides that he wants to schedule the officers in a more intelligent way. In order to do that, he consults the SafeStreets report database by logging in the web application. He would like to send the more experienced officers to areas in which there is a high number of violations categorized as "crash violations" whereas he would assign regular officers to other streets with an high frequency of violation of any category. In order to find out those streets, he filters the reported violations by the web application;immediately after, the interface displays the desired results. Now he is able to schedule the patrols as he wants. Daniele would also like to communicate which are the 10 cars that committed the highest number of violations in the city to all the officers. To do that he filters once again by the SafeStreets web application searching for the 10 car plates with the highest rate of violations.
 
 % TODO: check if this is good enough
 \subsubsection{Scenario 7}
-Robert is the civil councillor of his city and as a new year project he would like to find out which are the possible interventions that he can perform on the city streets in order to provide a more safe circulation. Robert has limited budget so in order to find out which is the optimal intervention to do on the streets he kindly asks to a friend that works in the police department of the city to retrieve some suggestions using the newly arrived SafeStreets system. Robert knows that the SafeStreets system crosses the data offered by the municipality about car accidents with its own information about violations happening in the city. The system finds out that there is a relation between car accidents and unsafe parking in zones near biking lanes so to limit the number of incidents/violations the system suggests to build barriers that divide the bike lane from the street. Robert likes the idea and start to work on a plan that he will propose to his manager.
+Robert is a civil councillor encharged of the street's safety of the city. He would like to find out which are the possible interventions that can be performed on the city streets in order to provide a safer circulation. Robert has limited budget  and he wants to perform only the paramount interventions: he asks to a friend that works in the police department of the city to retrieve some suggestions using the newly purchased SafeStreets system. Robert knows that the SafeStreets system crosses the data offered by the municipality about car accidents with its own information about violations happened in the city. The system finds out that there is a relation between car accidents and unsafe parking in zones near biking lanes.Thus,in order to limit the number of incidents/violations, the system suggests to build barriers that divide the bike lane from the street. Robert likes the idea and start to work on a plan that he will propose to his manager.
