--- a/RASD/Sections/3-Specific_Requirements/Functional_requirements/Use_cases.tex
+++ b/RASD/Sections/3-Specific_Requirements/Functional_requirements/Use_cases.tex
@@ -157,7 +157,7 @@
     \hline
     Name & Create Police Technician accounts \\
     \hline
-    Actors & Local system administrator\\
+    Actors & Local system administrator, Police technician\\
     \hline
     Entry Conditions & \begin{enumerate}[noitemsep]
                         \item The LSA has the SafeStreets Web application opened;
@@ -235,7 +235,7 @@
                     \item The system retrieves the violation reports associated to the PT;
                     \item The Web application displays to the PT the list of violations to which he is assigned;
                     \item The PT can inspect the details of each violation;
-                    \item The PT can modify the status of the violation. If he chooses to close the violation the report will then be archived.           
+                    \item The PT can modify the status of the violation. If he chooses to solve the violation the report will then be archived.           
                 \end{enumerate}\\
     \hline
     Exit conditions & The Police technician is provided with the information regarding the reports to which he is assigned.\\ 
