Start Requirements, Minor fixes

--- a/RASD/Sections/1-Introduction/Purpose.tex
+++ b/RASD/Sections/1-Introduction/Purpose.tex
@@ -2,7 +2,7 @@ The purpose of this Requirement Analysis and Specification Document (RASD)
 is to provide a detailed description about the software SafeStreets.
 In particular, this document is focused on important aspects that are
 useful during the design of the software architecture like: scope, functional and
-non-functional requirements, use cases and scenarios, constraints and assumption, UML diagrams, limitation and interfaces with other softwares.
+non-functional requirements, use cases and scenarios, constraints and assumption, UML diagrams, limitation and interfaces with other software.
 Overall the document is a useful guide for the developers that will have to follow
 and implement all the necessary requirements; nevertheless it is also a document
 that can be given to potential customers to get them an idea of what the software
