--- a/RASD/Sections/3-Specific_Requirements/Functional_requirements/Functional_requirements.tex
+++ b/RASD/Sections/3-Specific_Requirements/Functional_requirements/Functional_requirements.tex
@@ -3,3 +3,6 @@
 
 \subsection{Use cases}
 \input{Sections/3-Specific_Requirements/Functional_requirements/Use_cases.tex}
+
+\section{Requirements}
+\input{Sections/3-Specific_Requirements/Functional_requirements/Requirements.tex}
