--- a/RASD/Sections/1-Introduction/Goals.tex
+++ b/RASD/Sections/1-Introduction/Goals.tex
@@ -1,3 +1,4 @@
+% TODO: check if this still hold
 \begin{itemize}  
   \item {[G1]}: Allow the user to send a violation report consisting in a picture and some metadata;
   \item {[G2]}: Allow the user to watch the history of his reports and their status;
@@ -6,10 +7,10 @@
     \item {[G3.1]}: The user gets the latest violations near its current location;
     \item {[G3.2]}: The user gets the latest violations near the location that he specifies;
   \end{itemize} 
-  \item {[G.4]}: Allow the local system administrator of the police station to create accounts for the police technicians;
-  \item {[G.5]}: Allow the authorities to visualize the reports submitted by the users;
-  \item {[G.6]}: Allow the authorities to mine data to make analysis and retrieve statistics;
-  \item {[G.7]}: If the municipality offers a service that provides data about car accidents then the system must be able to cross this information with its owns data in order to identify possible unsafe areas;
+  \item {[G4]}: Allow the local system administrator of the police station to create accounts for the police technicians;
+  \item {[G5]}: Allow the authorities to visualize, schedule and change the status of reports submitted by the users;
+  \item {[G6]}: Allow the authorities to mine data to make analysis and retrieve statistics;
+  \item {[G7]}: If the municipality offers a service that provides data about car accidents then the system must be able to cross this information with its owns data in order to identify possible unsafe areas;
   \begin{itemize}
     \item {[G.7.1]}: In this case the system must be able to suggest possible interventions;
     \item {[G.7.2]}: The users must be able watch this unsafe areas;
