Fix alloy, generate world and add class diagram

--- a/RASD/Sections/2-Overall_Description/Assumptions_dependencies.tex
+++ b/RASD/Sections/2-Overall_Description/Assumptions_dependencies.tex
@@ -37,6 +37,6 @@ As far as the specification document is concerned, it is necessary to specify so
     \item {[D10]}: The municipality system allows SafeStreet to retrieve information about the car accident among a certain area;
     \item {[D11]}: The municipality system sends data accordingly to a common standard which is comprehensible by the SafeStreet system;
     \item {[D12]}: The image recognition service is able to detect and transcribe license plates;
-    \item {[D13]}: The police corporates and technicians can manage only the violation reports that belong to their jurisdiction;
+    \item {[D13]}: The police corporates and technicians can manage only the violation reports that belong to their jurisdiction (competence area);
     \item {[D14]}: The police technicians can only take care of the violations which are assigned to them by the police corporate.
 \end{itemize}
