--- a/RASD/Sections/3-Specific_Requirements/External_interface_requirements.tex
+++ b/RASD/Sections/3-Specific_Requirements/External_interface_requirements.tex
@@ -86,7 +86,8 @@ SafeStreets do not require any specific hardware device,
 thus there are no hardware interfaces to other existing systems.
 \subsection{Software Interfaces}
 SafeStreets is a standalone service and does not share any API to 
-external systems. However, the system requires the interaction with the Image recognition service and with the municipality's legacy system to perform its tasks. The software requires a standard format in order to retrieve car accident
+external systems. However, the system requires the interaction with the Image recognition service and with the municipality's legacy system to perform its tasks. Also, a map service is required in order to show the MDS positions on the mobile application.\newline
+The software requires a standard format in order to retrieve car accident.
 data from the municipality's system. Such standard will be specified more in details in the DD.
 \subsection{Communication Interfaces}
 External services are not allowed to interact actively with SafeStreets, therefore the system does not offer any communication interface to external systems.
