--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -45,6 +45,16 @@
   \input{Sections/3-Specific_Requirements/Design_constraints.tex}
   \section{Software system attributes}
   \input{Sections/3-Specific_Requirements/Software_system_attributes.tex}
+
+  \chapter{Formal analysis using Alloy}
+  \section{Overview}
+  \input{Sections/4-Formal_Analysis_Using_Alloy/Overview.tex}
+  \section{Signatures}
+  \input{Sections/4-Formal_Analysis_Using_Alloy/Signatures.tex}
+  \section{Facts}
+  \input{Sections/4-Formal_Analysis_Using_Alloy/Facts.tex}
+  \section{Worlds}
+  \input{Sections/4-Formal_Analysis_Using_Alloy/Worlds.tex}
   \end{document}
   
 
