--- a/RASD/Sections/1-Introduction/References.tex
+++ b/RASD/Sections/1-Introduction/References.tex
@@ -1,1 +1,3 @@
 % TODO: Add references 
+%Assignment
+%All materials prior to the RASD, hence the last Chapter has to include all the reference of the used sw/technology, i.e. UML version (with link) and so on
