--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -49,12 +49,16 @@
   \chapter{Formal analysis using Alloy}
   \section{Overview}
   \input{Sections/4-Formal_Analysis_Using_Alloy/Overview.tex}
-  \section{Signatures}
-  \input{Sections/4-Formal_Analysis_Using_Alloy/Signatures.tex}
-  \section{Facts}
-  \input{Sections/4-Formal_Analysis_Using_Alloy/Facts.tex}
+  \section{Alloy code}
+  \input{Sections/4-Formal_Analysis_Using_Alloy/Facts_and_Signatures.tex}
   \section{Worlds}
   \input{Sections/4-Formal_Analysis_Using_Alloy/Worlds.tex}
+  \section{Alloy model performance}
+  \input{Sections/4-Formal_Analysis_Using_Alloy/Performance.tex}
+
+  \chapter{Effort Spent}
+  \input{Sections/5-Effort_spent/Luca_loria.tex}
+  \input{Sections/5-Effort_spent/Nicolo_albergoni.tex}
   \end{document}
   
 
