--- a/RASD/config.tex
+++ b/RASD/config.tex
@@ -20,6 +20,7 @@
 \usepackage{fancyhdr}
 \linespread{1.3}\selectfont
 
+
 \usepackage{titlesec}
 \titleformat{\chapter}{}{}{0em}{\bf\LARGE}
 
@@ -33,3 +34,6 @@
 }
 
 \usepackage{enumitem}
+\usepackage{xcolor}
+\usepackage{listings}
+\usepackage{Alloy/alloy-style}
