--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -5,7 +5,7 @@
   %TODO: check id SafeStreets is well written in all files (i.e. missing final s)
   % TODO: Fill title page
   \begin{titlepage}
-    
+  
   \end{titlepage}
   
   \tableofcontents
@@ -17,10 +17,10 @@
   \input{Sections/1-Introduction/Scope.tex}
   \section{Definitions, acronyms and abbreviations}
   \input{Sections/1-Introduction/Definitions_acronyms_abbreviations.tex}
-  \section{References}
-  \input{Sections/1-Introduction/References.tex}
   \section{Revision History}
   \input{Sections/1-Introduction/Revision_history.tex}
+  \section{References}
+  \input{Sections/1-Introduction/References.tex}
   \section{Document Structure}
   \input{Sections/1-Introduction/Document_structure.tex}
   
@@ -59,6 +59,11 @@
   \chapter{Effort Spent}
   \input{Sections/5-Effort_spent/Luca_loria.tex}
   \input{Sections/5-Effort_spent/Nicolo_albergoni.tex}
+
+  \chapter{References}
+  \input{Sections/6-References/References.tex}
   \end{document}
   
 
+  \loadspellchecklist[en][wordlist.txt]
+  \setupspellchecking[state=start]
