--- a/RASD/Sections/2-Overall_Description/Assumptions_dependencies.tex
+++ b/RASD/Sections/2-Overall_Description/Assumptions_dependencies.tex
@@ -38,5 +38,6 @@ As far as the specification document is concerned, it is necessary to specify so
     \item {[D11]}: The municipality system sends data accordingly to a common standard which is comprehensible by the SafeStreet system;
     \item {[D12]}: The image recognition service is able to detect and transcribe license plates;
     \item {[D13]}: The police corporates and technicians can manage only the violation reports that belong to their jurisdiction (competence area);
-    \item {[D14]}: The police technicians can only take care of the violations which are assigned to them by the police corporate.
+    \item {[D14]}: The police corporates can manage only the police technicians of their jurisdiction;
+    \item {[D15]}: The police technicians can only take care of the violations which are assigned to them by the police corporate.
 \end{itemize}
