--- a/RASD/config.tex
+++ b/RASD/config.tex
@@ -30,10 +30,14 @@
     citecolor=black,
     filecolor=black,
     linkcolor=black,
-    urlcolor=black
+    urlcolor=blue
 }
 
 \usepackage{enumitem}
 \usepackage{xcolor}
 \usepackage{listings}
 \usepackage{Alloy/alloy-style}
+
+
+
+
