Finish Sequence diagrams

--- a/RASD/Sections/3-Specific_Requirements/Functional_requirements/Functional_requirements.tex
+++ b/RASD/Sections/3-Specific_Requirements/Functional_requirements/Functional_requirements.tex
@@ -4,5 +4,8 @@
 \subsection{Use cases}
 \input{Sections/3-Specific_Requirements/Functional_requirements/Use_cases.tex}
 
-\section{Requirements}
+\subsection{Requirements}
 \input{Sections/3-Specific_Requirements/Functional_requirements/Requirements.tex}
+
+\subsection{Sequence diagrams}
+\input{Sections/3-Specific_Requirements/Functional_requirements/Sequence_digrams.tex}
