--- a/RASD/Sections/3-Specific_Requirements/External_interface_requirements.tex
+++ b/RASD/Sections/3-Specific_Requirements/External_interface_requirements.tex
@@ -1,7 +1,7 @@
 \subsection{User Interfaces}
 This section shows a mockup version of the main functionalities of the mobile application and the web application of the final version of SafeStreets.
 \begin{itemize}
-    \item Mobile application:
+    \item \textit{Mobile application}:
             \begin{figure}[H]
                 \centering
                 \includegraphics[width=0.45\textwidth]{login_app}
@@ -41,7 +41,7 @@ This section shows a mockup version of the main functionalities of the mobile ap
             The user is allowed to look at the MDS highlighted in red on the map. It is also
             possible to search for a specific address through the search bar.
             \newpage
-    \item  Web application;
+    \item  \textit{Web application}:
     \begin{figure}[H]
         \centering
         \includegraphics[width=0.75\textwidth]{login_web}
