--- a/RASD/config.tex
+++ b/RASD/config.tex
@@ -8,6 +8,7 @@
 \usepackage{textcomp}
 \usepackage[utf8]{inputenc}
 % \usepackage[italian]{babel}
+\usepackage{longtable}
 \usepackage{graphicx}
 \graphicspath{ {Images/} }
 \usepackage{caption}
